--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,6 +12,20 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <receiver android:name=".WidgetProvider" >
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="com.andreldm.rcontrol.WidgetProvider.ACTION_WIDGET_PLAY_PAUSE" />
+                <action android:name="com.andreldm.rcontrol.WidgetProvider.ACTION_WIDGET_BACKWARD" />
+                <action android:name="com.andreldm.rcontrol.WidgetProvider.ACTION_WIDGET_FORWARD" />
+                <action android:name="com.andreldm.rcontrol.WidgetProvider.ACTION_WIDGET_VOL_LESS" />
+                <action android:name="com.andreldm.rcontrol.WidgetProvider.ACTION_WIDGET_VOL_MORE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget" />
+        </receiver>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
