--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,27 +16,27 @@
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
                 <action android:name="com.andreldm.rcontrol.WidgetProvider.ACTION_WIDGET_PLAY_PAUSE" />
-                <action android:name="com.andreldm.rcontrol.WidgetProvider.ACTION_WIDGET_BACKWARD" />
-                <action android:name="com.andreldm.rcontrol.WidgetProvider.ACTION_WIDGET_FORWARD" />
-                <action android:name="com.andreldm.rcontrol.WidgetProvider.ACTION_WIDGET_VOL_LESS" />
-                <action android:name="com.andreldm.rcontrol.WidgetProvider.ACTION_WIDGET_VOL_MORE" />
+                <action android:name="com.andreldm.rcontrol.WidgetProvider.ACTION_WIDGET_PREVIOUS" />
+                <action android:name="com.andreldm.rcontrol.WidgetProvider.ACTION_WIDGET_NEXT" />
+                <action android:name="com.andreldm.rcontrol.WidgetProvider.ACTION_WIDGET_VOL_MINUS" />
+                <action android:name="com.andreldm.rcontrol.WidgetProvider.ACTION_WIDGET_VOL_PLUS" />
+                <action android:name="com.andreldm.rcontrol.WidgetProvider.ACTION_WIDGET_SYNC" />
             </intent-filter>
 
             <meta-data
                 android:name="android.appwidget.provider"
                 android:resource="@xml/widget" />
         </receiver>
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        <!--<activity-->
+            <!--android:name=".MainActivity"-->
+            <!--android:label="@string/app_name" >-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        <!--</activity>-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
-        <service android:name="org.teleal.cling.android.AndroidUpnpServiceImpl"/>
+        <!--<service android:name="org.teleal.cling.android.AndroidUpnpServiceImpl"/>-->
         <service android:name="com.andreldm.rcontrol.RControlService"/>
     </application>
 
