--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,19 +1,19 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion "20.0.0"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "com.andreldm.rcontrol"
-        minSdkVersion 15
-        targetSdkVersion 19
+        minSdkVersion 16
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
     buildTypes {
         release {
-            runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -23,13 +23,11 @@ android {
     }
 }
 
-repositories {
-    maven {
-        url 'http://teleal.org/m2'
-    }
-}
-
 dependencies {
-    compile 'org.teleal.cling:cling-core:1.0.5'
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    testCompile 'junit:junit:4.12'
+    compile 'com.android.support:appcompat-v7:23.1.0'
+    compile ('io.socket:socket.io-client:0.6.2') {
+        exclude group: 'org.json', module: 'json'
+    }
 }
