--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,43 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.andreldm.rcontrol" >
+    package="com.andreldm.rcontrol">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        <receiver android:name=".WidgetProvider" >
+        android:theme="@style/AppTheme">
+        <receiver android:name=".ui.Widget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
-                <action android:name="com.andreldm.rcontrol.WidgetProvider.ACTION_WIDGET_PLAY_PAUSE" />
-                <action android:name="com.andreldm.rcontrol.WidgetProvider.ACTION_WIDGET_PREVIOUS" />
-                <action android:name="com.andreldm.rcontrol.WidgetProvider.ACTION_WIDGET_NEXT" />
-                <action android:name="com.andreldm.rcontrol.WidgetProvider.ACTION_WIDGET_VOL_MINUS" />
-                <action android:name="com.andreldm.rcontrol.WidgetProvider.ACTION_WIDGET_VOL_PLUS" />
-                <action android:name="com.andreldm.rcontrol.WidgetProvider.ACTION_WIDGET_SYNC" />
+                <action android:name="com.andreldm.rcontrol.ui.Widget.ACTION_WIDGET_PLAY_PAUSE" />
+                <action android:name="com.andreldm.rcontrol.ui.Widget.ACTION_WIDGET_PREVIOUS" />
+                <action android:name="com.andreldm.rcontrol.ui.Widget.ACTION_WIDGET_NEXT" />
+                <action android:name="com.andreldm.rcontrol.ui.Widget.ACTION_WIDGET_VOL_MINUS" />
+                <action android:name="com.andreldm.rcontrol.ui.Widget.ACTION_WIDGET_VOL_PLUS" />
+                <action android:name="com.andreldm.rcontrol.ui.Widget.ACTION_WIDGET_SYNC" />
             </intent-filter>
 
             <meta-data
                 android:name="android.appwidget.provider"
                 android:resource="@xml/widget" />
         </receiver>
+
         <!--<activity-->
-            <!--android:name=".MainActivity"-->
-            <!--android:label="@string/app_name" >-->
+            <!--android:name=".ui.TestActivity"-->
+            <!--android:label="@string/app_name"-->
+            <!--android:theme="@style/AppTheme">-->
             <!--<intent-filter>-->
                 <!--<action android:name="android.intent.action.MAIN" />-->
+
                 <!--<category android:name="android.intent.category.LAUNCHER" />-->
             <!--</intent-filter>-->
         <!--</activity>-->
 
-        <!--<service android:name="org.teleal.cling.android.AndroidUpnpServiceImpl"/>-->
-        <service android:name="com.andreldm.rcontrol.RControlService"/>
+        <activity
+            android:name=".ui.PickServerActivity"
+            android:noHistory="true"
+            android:excludeFromRecents="true"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar">
+        </activity>
     </application>
 
 </manifest>
