Updating the pom

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -25,18 +25,34 @@
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+					<finalName>${project.artifactId}-${project.version}-full</finalName>
+					<appendAssemblyId>false</appendAssemblyId>
+
+					<archive>
+						<manifest>
+							<mainClass>com.andreldm.rcontrol.server.Main</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
-
-	<repositories>
-		<repository>
-			<id>teleal-repo</id>
-			<url>http://teleal.org/m2</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-	</repositories>
 
 	<dependencies>
 		<dependency>
@@ -52,9 +68,9 @@
 		</dependency>
 
 		<dependency>
-    		<groupId>com.miglayout</groupId>
-    		<artifactId>miglayout-swing</artifactId>
-    		<version>4.2</version>
+			<groupId>com.miglayout</groupId>
+			<artifactId>miglayout-swing</artifactId>
+			<version>4.2</version>
 		</dependency>
 	</dependencies>
 </project>
